// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaire /> should render mixed work period 1`] = `
.c1 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2em;
}

.c5 {
  width: 14rem;
}

.c6 {
  width: 8.5rem;
}

.c7 {
  width: 8.5rem;
}

.c3 {
  position: relative;
}

.c4 {
  display: block;
  position: absolute;
  top: -1.5rem;
}

.c8 {
  border: none;
  width: 100%;
  margin-top: 1rem;
}

.c9 {
  background: none;
}

.c10 {
  text-align: left;
  border: none;
  border-bottom: 1px solid rgba(0,0,0,0.5);
}

.c11 {
  text-align: right;
  border: none;
  border-bottom: 1px solid rgba(0,0,0,0.5);
}

.c12 {
  border-color: transparent;
}

.c13 {
  text-align: left;
  border: none;
}

.c14 {
  text-align: right;
  border: none;
}

.c15 {
  font-size: 0.8rem;
  opacity: 0.8;
}

.c16 {
  width: 25%;
  white-space: nowrap;
  border: none;
}

<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light "
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c0"
        >
          <label
            class="c1"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c1"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <form>
          <div
            class="c2"
          >
            <label
              class="c3"
            >
              <span
                class="c4"
              >
                type
              </span>
              <select
                class="c5"
                name="type"
              >
                <option
                  value="temps-partiel"
                >
                  Temps partiel
                </option>
                <option
                  value="temps-plein"
                >
                  Temps plein
                </option>
              </select>
            </label>
            <label
              class="c3"
            >
              <span
                class="c4"
              >
                durée (en mois)
              </span>
              <input
                class="c6"
                min="0"
                name="duree"
                placeholder="8 mois"
                type="number"
                value=""
              />
            </label>
            <label
              class="c3"
            >
              <span
                class="c4"
              >
                salaire mensuel
              </span>
              <input
                class="c7"
                min="0"
                name="salaire"
                placeholder="€"
                type="number"
                value=""
              />
            </label>
            <button
              class="btn"
              disabled=""
            >
              Ajouter la période
            </button>
          </div>
        </form>
        <table
          class="c8"
        >
          <thead
            class="c9"
          >
            <tr>
              <th
                class="c10"
              >
                Type
              </th>
              <th
                class="c11"
              >
                Durée
              </th>
              <th
                class="c11"
              >
                Salaire
              </th>
              <th
                class="c12"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="c13"
              >
                Temps plein
              </td>
              <td
                class="c14"
              >
                10
                <span
                  class="c15"
                >
                  mois
                </span>
              </td>
              <td
                class="c14"
              >
                1300
                <span
                  class="c15"
                >
                  €
                </span>
              </td>
              <td
                class="c16"
              >
                <div
                  class="btn btn__link  "
                  link="true"
                  role="button"
                  tabindex="0"
                >
                  Modifier
                </div>
                 – 
                <div
                  class="btn btn__link  "
                  link="true"
                  role="button"
                  tabindex="0"
                >
                  Supprimer
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="c13"
              >
                Temps partiel
              </td>
              <td
                class="c14"
              >
                10
                <span
                  class="c15"
                >
                  mois
                </span>
              </td>
              <td
                class="c14"
              >
                1000
                <span
                  class="c15"
                >
                  €
                </span>
              </td>
              <td
                class="c16"
              >
                <div
                  class="btn btn__link  "
                  link="true"
                  role="button"
                  tabindex="0"
                >
                  Modifier
                </div>
                 – 
                <div
                  class="btn btn__link  "
                  link="true"
                  role="button"
                  tabindex="0"
                >
                  Supprimer
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
  <div
    class="container "
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Salaire /> should render single work period 1`] = `
.c2 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 6em;
}

.c1 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light "
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c0"
        >
          <label
            class="c1"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c1"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <h2>
          Derniers mois de salaire
        </h2>
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <thead>
            <tr>
              <td
                style="text-align: center; font-weight: bold;"
                width="140"
              >
                Mois
              </td>
              <td
                style="text-align: center; font-weight: bold;"
                width="200"
              >
                Salaire brut mensuel
              </td>
            </tr>
          </thead>
          <tbody>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Dernier salaire
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
              <td
                rowspan="3"
                style="text-align: center; background: rgb(221, 221, 221);"
                valign="middle"
              >
                trois derniers
                <br />
                mois de salaire
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-1
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-2
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-3
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-4
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-5
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-6
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
  <div
    class="container "
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Salaire /> should switch from single period to mixed period 1`] = `
.c2 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 6em;
}

.c1 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light "
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c0"
        >
          <label
            class="c1"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c1"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <h2>
          Derniers mois de salaire
        </h2>
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <thead>
            <tr>
              <td
                style="text-align: center; font-weight: bold;"
                width="140"
              >
                Mois
              </td>
              <td
                style="text-align: center; font-weight: bold;"
                width="200"
              >
                Salaire brut mensuel
              </td>
            </tr>
          </thead>
          <tbody>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Dernier salaire
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
              <td
                rowspan="3"
                style="text-align: center; background: rgb(221, 221, 221);"
                valign="middle"
              >
                trois derniers
                <br />
                mois de salaire
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-1
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-2
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-3
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-4
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-5
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-6
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c2"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
  <div
    class="container "
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;
